--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "n8n-workflow-docs",
   "version": "1.0.0",
-  "description": "N8N Workflow Documentation System - Python Implementation",
+  "description": "N8N Workflow Documentation System",
+  "type": "module",
   "scripts": {
-    "start": "echo 'Use: python run.py' && python run.py",
-    "dev": "echo 'Use: python run.py --dev' && python run.py --dev",
-    "install-python": "pip install -r requirements.txt"
+    "start": "node src/server.js",
+    "dev": "node src/server.js"
   },
   "keywords": [
     "n8n",
@@ -15,9 +15,12 @@
   ],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "compression": "^1.7.4"
+  },
   "engines": {
     "node": ">=16.0.0"
-  },
-  "devDependencies": {},
-  "dependencies": {}
+  }
 }
